# face-gaze-auth

./: .gitignore  compose.yml
backend/: Dockerfile  app.py  log_decorator.py  main.py  models.py  pyproject.toml  utils.py
backend/liveness/: example_values.py  fit.py  linear_model.joblib  ml_model.py
backend/routers/: __init__.py  face_id.py  liveness.py
caddy/: Caddyfile
rclone/: Dockerfile  rclone.conf.example
