[project]
name = "backend"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "cachetools>=6.2.4",
    "deepface>=0.0.96",
    "fastapi[standard]>=0.125.0",
    "pyarrow>=22.0.0",
    "python-multipart>=0.0.21",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "tf-keras>=2.20.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
